Alterar cores: fundos brancos para pretos, cores azuis para laranjas, textos brancos

--- a/static/css/navbar-fix.css
+++ b/static/css/navbar-fix.css
@@ -29,6 +29,6 @@ nav.navbar,
     translate: none !important;
     margin: 0 !important;
     padding: 0 !important;
-    background: #ffffff !important;
+    background: #000000 !important;
 }
 
