--- a/templates/rastreamento_resultado.html
+++ b/templates/rastreamento_resultado.html
@@ -269,8 +269,8 @@
 }
 
 .status-pendente {
-    background: #dbeafe;
-    color: #1e40af;
+    background: #fff3cd;
+    color: #856404;
 }
 
 .status-em_andamento {
@@ -279,8 +279,8 @@
 }
 
 .status-aguardando_pecas {
-    background: #dbeafe;
-    color: #1e40af;
+    background: #fff3cd;
+    color: #856404;
 }
 
 .status-pronto, .status-pago {
@@ -514,8 +514,8 @@
 }
 
 .badge-warning {
-    background: #dbeafe;
-    color: #1e40af;
+    background: #fff3cd;
+    color: #856404;
 }
 
 .badge-success {
