--- a/templates/videos.html
+++ b/templates/videos.html
@@ -105,7 +105,7 @@
     width: 100%;
     aspect-ratio: 16/9;
     overflow: hidden;
-    background: #215f97;
+    background: #000000;
 }
 
 .video-page-item h3 {
