--- a/templates/admin/agendamentos.html
+++ b/templates/admin/agendamentos.html
@@ -112,7 +112,8 @@
 
 .observacoes-box {
     padding: 0.75rem;
-    background: white;
+    background: #000000;
+    color: #ffffff;
     border-left: 3px solid var(--primary-color);
     border-radius: 5px;
     margin: 0.5rem 0;
