--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,7 @@
             <ul class="nav-menu">
                 <li><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
                 <li><a href="{{ url_for('sobre') }}" class="nav-link">Sobre</a></li>
+                <li><a href="{{ url_for('pagina_servico', slug='celular') }}" class="nav-link">Celulares</a></li>
                 <li class="nav-dropdown">
                     <span class="nav-link dropdown-trigger" style="cursor: pointer;">
                         Serviços <i class="fas fa-chevron-down"></i>
