--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -31,6 +31,9 @@
                 <li><a href="{{ url_for('admin_servicos') }}" class="admin-nav-link">
                     <i class="fas fa-tools"></i> Serviços
                 </a></li>
+                <li><a href="{{ url_for('admin_paginas_servicos') }}" class="admin-nav-link">
+                    <i class="fas fa-file-alt"></i> Páginas de Serviços
+                </a></li>
                 <li><a href="{{ url_for('admin_clientes') }}" class="admin-nav-link">
                     <i class="fas fa-users"></i> Clientes
                 </a></li>
