Criar modulo Links do Menu no admin para gerenciar links do menu principal

--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -34,6 +34,9 @@
                 <li><a href="{{ url_for('admin_paginas_servicos') }}" class="admin-nav-link">
                     <i class="fas fa-file-alt"></i> Páginas de Serviços
                 </a></li>
+                <li><a href="{{ url_for('admin_links_menu') }}" class="admin-nav-link">
+                    <i class="fas fa-link"></i> Links do Menu
+                </a></li>
                 <li><a href="{{ url_for('admin_clientes') }}" class="admin-nav-link">
                     <i class="fas fa-users"></i> Clientes
                 </a></li>
