--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,11 @@
             <ul class="nav-menu">
                 <li><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
                 <li><a href="{{ url_for('sobre') }}" class="nav-link">Sobre</a></li>
-                <li><a href="{{ url_for('pagina_servico', slug='celular') }}" class="nav-link">Celulares</a></li>
+                {% if links_menu %}
+                    {% for link in links_menu %}
+                    <li><a href="{{ link.url }}" class="nav-link" {% if link.abrir_nova_aba %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.texto }}</a></li>
+                    {% endfor %}
+                {% endif %}
                 <li class="nav-dropdown">
                     <span class="nav-link dropdown-trigger" style="cursor: pointer;">
                         Serviços <i class="fas fa-chevron-down"></i>
