Configurar todos os links do menu para abrir em nova aba

--- a/templates/admin/add_link_menu.html
+++ b/templates/admin/add_link_menu.html
@@ -48,10 +48,10 @@
         
         <div class="form-group">
             <label class="checkbox-label">
-                <input type="checkbox" id="abrir_nova_aba" name="abrir_nova_aba">
+                <input type="checkbox" id="abrir_nova_aba" name="abrir_nova_aba" checked>
                 <span>Abrir em nova aba</span>
             </label>
-            <small class="form-help">Marque esta opção se o link deve abrir em uma nova aba do navegador</small>
+            <small class="form-help">O link será aberto em uma nova aba do navegador</small>
         </div>
         
         <div class="form-actions">
