Adicionar Ã­cone do YouTube no rodapÃ©

--- a/templates/admin/footer.html
+++ b/templates/admin/footer.html
@@ -55,6 +55,14 @@
                 <small class="form-help">Link do WhatsApp (formato: https://wa.me/5586988959957)</small>
             </div>
             
+            <div class="form-group">
+                <label for="youtube">
+                    <i class="fab fa-youtube"></i>
+                    YouTube
+                </label>
+                <input type="url" id="youtube" name="youtube" value="{{ footer.redes_sociais.youtube }}" placeholder="https://youtube.com/@seu-canal">
+                <small class="form-help">Link do canal do YouTube</small>
+            </div>
         </div>
         
         <div class="section-divider">
